# ChangeLog for media-video/mplayer2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mplayer2-2.0 (28 Mar 2011)

  28 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0.ebuild,
  mplayer2-9999.ebuild:
  version bump, license is GPL-3

*mplayer2-2.0_rc2-r2 (24 Mar 2011)

  24 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_rc2-r2.ebuild,
  mplayer2-9999.ebuild:
  migrate to EAPI4, sync with portage

*mplayer2-9999 (16 Mar 2011)
*mplayer2-2.0_rc2-r1 (16 Mar 2011)

  16 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_rc2-r1.ebuild,
  +mplayer2-9999.ebuild, +metadata.xml:
  mplayer-uau -> mplayer2 rename

*mplayer-uau-2.0_rc2 (09 Mar 2011)

  09 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_rc2.ebuild,
  mplayer-uau-9999.ebuild:
  internal libdvdcss was removed, version bump

*mplayer-uau-2.0_rc1 (27 Feb 2011)

  27 Feb 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_rc1.ebuild:
  version bump

  16 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-2.0_beta1.ebuild,
  mplayer-uau-9999.ebuild:
  fix libass dep, cosmetics

*mplayer-uau-2.0_beta1 (15 Feb 2011)

  15 Feb 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_beta1.ebuild,
  mplayer-uau-9999.ebuild, metadata.xml:
  add beta1, update live

  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  upstream removed bz2 and lzo deps

  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  upstream removed internal tremor and libmpeg2

  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  upstream removed vidix, zoran, some docs and internal libfaad2

  30 Jan 2011; Nikoli <nikoli@lavabit.com>
  mplayer-uau-1.0_rc4_p20110126.ebuild, mplayer-uau-9999.ebuild:
  sync with portage

*mplayer-uau-1.0_rc4_p20110126 (30 Jan 2011)

  30 Jan 2011; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20110126.ebuild:
  new snapshot

  25 Jan 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  fix build, sync with portage