@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Apr 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0.ebuild,
+  mplayer2-9999.ebuild:
+  use /etc/mplayer2, add libav support, sync with portage, cosmetics
+
 *mplayer2-2.0 (28 Mar 2011)
 
   28 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0.ebuild,
